# renko

./: .gitignore  README.md  pyproject.toml
notebooks/: showcase.ipynb  tsla.csv
rand/: __init__.py
renko/: bar.py  chart.py
tests/: test_chart.py
